k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presentation-frontend
  namespace: astdev-presentation
  labels:
    app: presentation-frontend
spec:
  type: LoadBalancer
  selector:
    app: presentation-frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
